--- a/GENERICA/style.css
+++ b/GENERICA/style.css
@@ -84,6 +84,8 @@ article {
 }
 .postagemrecentes{
   display: grid;
+  grid-row: 2 / -2;
+  grid-column: -1;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   background-color: #ffffff;
