--- a/desafio/style.css
+++ b/desafio/style.css
@@ -222,7 +222,7 @@ main {
 }
 
 footer {
-    margin-top: 5%;
+    margin-top: 1%;
     width: 100%;
     height: 50px;
 }
@@ -246,5 +246,6 @@ footer {
 }
 .navfooterb>li {
     margin-left: 2%;
+    margin-bottom: 4%;
     color: #b47019;
 }
